# wispr-flow-clone

./: README.md  index.html  localhost+1-key.pem  localhost+1.pem  package-lock.json  package.json
src/: App.tsx  UiPreview.tsx  main.tsx  voiceTest.ts
src-tauri/: .env.example  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/audio/: pcm-processor.js  useRecorder.ts
src/transcription/: events.ts
src/ui/: Controls.tsx
